--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "drandin/closure-table-comments": "^0.1.0",
         "fideloper/proxy": "^4.0",
+        "kalnoy/nestedset": "5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
